Stopping the cellspacing="0" madness

--- a/system/cms/themes/pyrocms/css/workless/application.css
+++ b/system/cms/themes/pyrocms/css/workless/application.css
@@ -1105,6 +1105,10 @@ table > thead > tr {
   border-bottom: 2px solid #ddd;
 }
 
+table {
+  /*border-spacing:0;*/
+}
+
 table > tbody > tr {
   border-bottom: 1px solid #ddd;
 }
